--- a/data/common.yaml
+++ b/data/common.yaml
@@ -18,6 +18,7 @@ mediawiki::cache_type: 'CACHE_NONE'
 mediawiki::parser_cache_type: 'CACHE_NONE'
 mediawiki::logo_path: '$wgResourceBasePath/resources/assets/wiki.png'
 mediawiki::login_message: 'Login'
+mediawiki::ldap_domain: 'LDAP'
 mediawiki::ldap_enctype: 'ssl'
 mediawiki::ldap_server: ''
 mediawiki::ldap_bind_user: ''
