Visual Editor is not currently broken for private wikis, just not well documented

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -62,6 +62,7 @@ mediawiki::bundled_extensions:
   - 'ImageMap'
   - 'ParserFunctions'
   - 'WikiEditor'
+  - 'VisualEditor'
 mediawiki::memcached_servers: []
 mediawiki::ldap_groups_required: []
 mediawiki::ldap_groups_excluded: []
