ensure user exists

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -74,6 +74,7 @@ mediawiki::swift_enabled: false
 mediawiki::verify_mimetype: false
 mediawiki::manage_database: true
 mediawiki::manage_selinux: false
+mediawiki::manage_httpd: false
 mediawiki::db_type: 'postgres'
 mediawiki::ldap_group_strategy: 'GroupUniqueMember'
 mediawiki::bundled_skins:
