ensure user exists

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -29,8 +29,8 @@ mediawiki::wiki_path: '/wiki'
 mediawiki::resource_path: ''
 mediawiki::owner: 'root'
 mediawiki::group: 'root'
-mediawiki::httpd: 'apache'
-mediawiki::httpd_group: 'apache'
+mediawiki::httpd: 'www-data'
+mediawiki::httpd_group: 'www-data'
 mediawiki::db_host: 'localhost'
 mediawiki::db_user: 'mediawiki'
 mediawiki::server_name: '%{facts.fqdn}'
