--- a/data/osfamily/Debian.yaml
+++ b/data/osfamily/Debian.yaml
@@ -1,3 +1,3 @@
 mediawiki::manage_selinux: false
-mediawiki::httpd: apache
-mediawiki::httpd_group: apache
+mediawiki::httpd: www-data
+mediawiki::httpd_group: www-data
