--- a/data/osfamily/RedHat.yaml
+++ b/data/osfamily/RedHat.yaml
@@ -1,3 +1,3 @@
 mediawiki::manage_selinux: true
-mediawiki::httpd: www-data
-mediawiki::httpd_group: www-data
+mediawiki::httpd: apache
+mediawiki::httpd_group: apache
